ver 0.23.17 (not yet released)
* protocol
  - "albumart" tries to send larger chunks if available
* storage
  - nfs: require libnfs 4.0 or later
* database
  - inotify: trigger update after symlink was created
* decoder
  - ffmpeg: prefer over sndfile and audiofile for its DTS-WAV support
* support libfmt 11.1

ver 0.23.16 (2024/12/03)
* database
  - fix integer overflows with 64-bit inode numbers
* filter
  - ffmpeg: fix for filters producing no output
* support libfmt 11
* support ICU 76

ver 0.23.15 (2023/12/20)
* decoder
  - ffmpeg: fix build failure with FFmpeg 6.1
* output
  - alsa: limit buffer time to 2 seconds

ver 0.23.14 (2023/10/08)
* decoder
  - flac: fix scanning files with non-ASCII names on Windows
  - mad: fix calculation of LAME peak values
* mixer
  - wasapi: fix problem setting volume
* more libfmt 10 fixes
* fix auto-detected systemd unit directory
* Android
  - require Android 7 or newer

ver 0.23.13 (2023/05/22)
* input
  - curl: fix busy loop after connection failed
  - curl: hide "404" log messages for non-existent ".mpdignore" files
* archive
  - zzip: fix crash bug
* database
  - simple: reveal hidden songs after deleting containing CUE
* decoder
  - ffmpeg: reorder to a lower priority than "gme"
  - gme: require GME 0.6 or later
* output
  - pipewire: fix corruption bug due to missing lock
* Linux
  - shut down if parent process dies in --no-daemon mode
  - determine systemd unit directories via pkg-config
* support libfmt 10

ver 0.23.12 (2023/01/17)
* input
  - curl: require CURL 7.55.0 or later
* decoder
  - mad: fix integer underflow with very small files
* tags
  - fix crash bug due to race condition
* output
  - pipewire: adjust to PipeWire 0.3.64 API change
* fix build failures with GCC 13

ver 0.23.11 (2022/11/28)
* database
  - simple: move default database to ~/.cache/mpd/db from ~/.cache/mpd.db
  - simple: default "cache_directory" to ~/.cache/mpd/mounts
* macOS: fix build failure "no archive members specified"
* Windows