@@ -1,6 +1,7 @@
 ver 0.23.17 (not yet released)
 * protocol
   - "albumart" tries to send larger chunks if available
+  - explicitly disallow "idle" and "noidle" in command lists
 * storage
   - nfs: require libnfs 4.0 or later
 * database
